--- a/src/components/ProductList/ProductList.module.scss
+++ b/src/components/ProductList/ProductList.module.scss
@@ -1,13 +1,22 @@
-@media screen and (max-width: 769px) {
-  .list {
-    margin: 0;
-    margin-bottom: 0;
+.list {
+  padding: 0 10px;
+
+  @include tablet-potrait-up {
+    padding: 0 40px;
   }
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .card {
   padding: 10px;
-  flex: 1 1 30%;
+  @include tablet-potrait-up {
+    padding: 20px 40px;
+  }
+  flex: 1 1 50%;
+  @include desktop-up {
+    flex: 1 1 33%;
+  }
   img {
     width: 100%;
     display: block;
@@ -20,15 +29,11 @@
     &.vertical {
       flex-direction: column;
       align-items: center;
-      h1, h2, h3 {
+      h1,
+      h2,
+      h3 {
         margin-bottom: 0;
       }
     }
-  }
-}
-
-@media screen and (max-width: 769px) {
-  .card {
-    flex: 1 1 50%;
   }
 }
