--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -1,67 +1,91 @@
 .container {
-  padding: 0 90px;
-}
-@media screen and (max-width: 993px) {
-  .container {
-    padding: 0 40px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0;
+
+  @include tablet-potrait-up {
+    display: flex;
+    flex-wrap: wrap;
   }
-}
-@media screen and (max-width: 769px) {
-  .container {
-    padding: 0;
+
+  .flexBlock {
+    text-align: center;
+    flex: 1 1 50%;
+
+    @include phone-only {
+      flex: 1 1 100%;
+    }
   }
 }
 
 .infoContainer {
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .info {
   width: 100%;
   text-align: center;
-  padding: 50px;
+  padding: 10px;
+
+  @include tablet-potrait-up {
+    padding: 20px;
+  }
+
+  @include tablet-landscape-up {
+    padding: 40px;
+  }
+
+  @include desktop-up {
+    padding: 80px;
+  }
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
   .description {
     text-align: justify;
     color: $font-color-gray;
+
+    @include phone-only {
+      padding: 10px;
+    }
   }
 }
 
-@media screen and (max-width: 993px) {
-  .info {
-    padding: 50px 20px;
-  }
-}
-
-@media screen and (min-width: 770px) {
+// In smaller screen, only 1 column, no scrolling info
+@include tablet-potrait-up {
   .isPastFooter {
-    padding-left: 10px;
-    padding-right: 10px;
     align-items: flex-end;
     flex-direction: row;
     display: flex;
     justify-content: center;
+
     .info {
       bottom: 0;
       top: auto;
       position: absolute;
     }
   }
-  .isAtTop .info {
-    position: relative;
-  }
+
   .info {
     position: fixed;
     box-sizing: border-box;
     top: 50px;
-    width: calc(50vw - 100px);
+    width: calc(50vw - 40px);
     max-width: 600px;
     min-height: calc(100vh - 240px);
+
     .name {
       margin: 0;
     }
+
     .price {
       padding-bottom: 30px;
     }
+
     .checkSize {
       width: 100%;
       display: block;
@@ -70,12 +94,15 @@
     }
   }
 }
+
 .imageContainer {
   position: relative;
+
   img {
     width: 100%;
     height: 100%;
   }
+
   .sensor {
     top: 50px;
   }
@@ -86,15 +113,26 @@
   position: absolute;
   z-index: 1;
   height: 1px;
-  width: 100%;
+  width: 50px;
 }
 
-.borderBlock {
-  :global(.ant-row-flex) {
-    border-top: 1px solid #9d9da1;
-    padding: 0;
-  }
-  :global(.ant-col) {
-    padding: 15px 0;
+.borderBlock>div {
+  border-top: 1px solid #9d9da1;
+  padding: 15px 0;
+}
+
+/* Customized Ant Design Dropdown menu */
+:global(.ant-select-dropdown-menu-item.disabled) {
+  color: rgba(0, 0, 0, 0.25);
+}
+
+.successMessage {
+  padding: 10px;
+  margin: 10px 0;
+  display: flex;
+  background-color: #e0f3ea;
+  align-items: center;
+  i {
+    margin-right: 10px;
   }
 }
