--- a/src/components/FloatButton/FloatButton.module.scss
+++ b/src/components/FloatButton/FloatButton.module.scss
@@ -1,17 +1,12 @@
-.button {
+.container {
   position: fixed;
-  bottom: 25px;
-  right: 25px;
-  width: 50px;
-  height: 50px;
-  border: none;
-  border-radius: 50%;
-  background: #fff;
-  color: #c1a081;
-  z-index: 2;
-  box-shadow: 0 2px 10px rgba(54, 54, 54, 0.15);
-  i {
-    font-size: 18px;
+  bottom: 0;
+  height: 60px;
+  width: 100%;
+  z-index: 1;
+  .button {
+    width: 100%;
+    height: 100%;
   }
 }
 
