--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -4,10 +4,12 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-  min-height: calc(100vh - 80px);
-  height: 100px;
+  height: 100%;
   padding: 10px;
   position: relative;
+  &.fullScreen {
+    min-height: calc(100vh - 80px);
+  }
 }
 
 .overlay {
