--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -61,8 +61,12 @@ main {
       color: $font-color-gray;
     }
 
-    &.darkText {
+    &.darkerText {
       color: $font-color-dark;
+    }
+
+    &.darkTone {
+      color: #fff;
     }
   }
 
@@ -82,7 +86,7 @@ main {
   }
 
 
-  .darkText {
+  .darkerText {
 
     h1,
     h2,
