--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
   text-align: center;
-  background: $color-background;
+  // background: $color-background;
   // background: #C79479;
   padding-top: 20px;
   padding-bottom: 40px;
