--- a/src/components/ProductList/ProductList.module.scss
+++ b/src/components/ProductList/ProductList.module.scss
@@ -4,39 +4,58 @@
   @include tablet-potrait-up {
     padding: 0 40px;
   }
+
   display: flex;
   flex-wrap: wrap;
 }
 
 .card {
   padding: 10px;
+
   @include tablet-potrait-up {
     padding: 20px 40px;
   }
+
   flex: 1 1 100%;
+
   @include tablet-potrait-up {
     flex: 1 1 50%;
   }
+
   @include desktop-up {
     flex: 1 1 33%;
   }
+
   img {
     width: 100%;
     display: block;
   }
+
   .description {
     display: flex;
     padding: 5px 0;
     justify-content: space-between;
     align-items: baseline;
+
     &.vertical {
       flex-direction: column;
       align-items: center;
+
       h1,
       h2,
       h3 {
         margin-bottom: 0;
       }
     }
+  }
+}
+
+.priceContainer {
+  .salePrice {
+    color: $color-danger;
+  }
+
+  .oldPrice {
+    text-decoration: line-through;
   }
 }
