--- a/src/components/ValueBlock/ValueBlock.module.scss
+++ b/src/components/ValueBlock/ValueBlock.module.scss
@@ -1,44 +1,14 @@
 .container {
-    width: 100%;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 20px;
-    @include tablet-potrait-up {
-        padding: 40px;
-    }
-}
-
-.item {
-    flex-grow: 1;
-    flex-basis: 100%;
-    height: 60vh;
-    padding: 20px;
-
-    @include tablet-potrait-up {
-        flex-grow: 1;
-        flex-basis: 50%;
-        height: 500px;
-        padding: 40px;
-    }
-    @include desktop-up {
-        height: 700px;
-    }
-}
-
-.overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
-.textWrapper {
-    position: relative;
-    display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    height: 100%;
-    text-align: center;
-    padding: 40px;
+
+    &>div {
+        flex-basis: 50%;
+    }
+
+    .text {
+        margin: 0 auto;
+        max-width: 400px;
+    }
 }
