--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -1,6 +1,6 @@
-/* //Typograhpy BlinkMacSystemFont*/
+/* START Typograhpy BlinkMacSystemFont*/
 * {
-  font-family: -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Inter",
+  font-family: "Avenir" -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Inter",
     "Helvetica Neue", sans-serif;
 }
 
@@ -11,10 +11,14 @@ h4,
 h5,
 h6,
 span {
-  font-weight: 200;
+  font-weight: 400;
+  &.heavyText {
+    font-weight: 600;
+  }
 }
 
 .darkTone {
+
   h1,
   h2,
   h3,
@@ -34,15 +38,17 @@ span {
 }
 
 .pageContainer {
-  background: $color-background;
+  // background: $color-background;
 }
 
 main {
-  background: $color-background;
+  // background: $color-background;
   line-height: 1.75;
 }
+
 header,
 main {
+
   h1,
   h2,
   h3,
@@ -53,12 +59,22 @@ main {
   p,
   li {
     color: $font-color;
+
     &.grayText {
       color: $font-color-gray;
+    }
+
+    &.darkerText {
+      color: $font-color-dark;
+    }
+
+    &.darkTone {
+      color: #fff;
     }
   }
 
   .grayText {
+
     h1,
     h2,
     h3,
@@ -69,6 +85,22 @@ main {
     p,
     span {
       color: $font-color-gray;
+    }
+  }
+
+
+  .darkerText {
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    a,
+    p,
+    span {
+      color: $font-color-dark;
     }
   }
 }
@@ -101,11 +133,11 @@ blockquote:before {
   position: absolute;
   left: 10px;
   top: -20px;
-  color: #7a7a7a;
+  color: $font-color-gray;
 }
 
 blockquote cite {
-  color: #999999;
+  color: $font-color-gray;
   display: block;
   margin-top: 10px;
 }
@@ -117,6 +149,7 @@ blockquote cite:before {
 .underline {
   display: inline-block;
   position: relative;
+
   &:before {
     content: "";
     position: absolute;
@@ -124,8 +157,8 @@ blockquote cite:before {
     height: 1px;
     left: 0;
     bottom: 2px;
-    color: #727272;
-    background-color: #727272;
+    color: $font-color-gray;
+    background-color: $font-color-gray;
     transition: width 0.2s ease-in-out;
   }
 
@@ -137,22 +170,47 @@ blockquote cite:before {
 .uppercase {
   text-transform: uppercase !important;
 }
+
 .noBtmMargin {
   margin-bottom: 0 !important;
 }
 
 .link {
-  color: #c79479;
-}
-// /* Typography */
-
-/* Global Layout */
-#gatsby-focus-wrapper {
-  background: $color-background;
+  color: $color-brand-primary;
 }
 
+/* END Typography */
+
+/* START Global Layout */
+// #gatsby-focus-wrapper {
+//   background: $color-background;
+// }
+
+
+// Grid
 .gridWrapper {
   width: 100%;
+
+  .grid {
+    max-width: 900px;
+
+    &.wide {
+      max-width: 1200px;
+    }
+
+    &.narrow {
+      max-width: 600px;
+    }
+
+    margin: 0 auto;
+    padding: 0;
+    position: relative;
+
+    &.darkTone {
+      // background: #edc4ad;
+      background: $color-brand-light;
+    }
+  }
 }
 
 hr.divider {
@@ -165,66 +223,48 @@ hr.divider {
   background: none;
 }
 
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 900px) {
   hr.divider {
     padding-top: 40px;
   }
 }
 
-.grid {
-  max-width: 1600px;
-  &.narrow {
-    max-width: 700px;
-    padding: 10px;
-  }
-  margin: 0 auto;
-  padding: 0 90px;
-  position: relative;
-  &.darkTone {
-    // background: #edc4ad;
-    background: #e8c7b5;
-  }
-}
+// END Grid
 
-
-
-.gridTitle {
+// Text block
+.sectionTitle {
   flex-basis: 100%;
   text-align: left;
-  padding: 35px 0;
+  padding: 20px;
+
+  @include tablet-potrait-up {
+    padding: 20px 80px;
+  }
+
   margin: 0;
+
   &.footTitle {
     padding-top: 0;
     padding-bottom: 35px;
   }
 }
 
-.flexSection {
-  display: flex;
-  min-height: 400px;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: row;
-  width: 100%;
-
-  &.flexLeft {
-    justify-content: left;
-  }
-  &.boxContent {
-    text-align: center;
-  }
+.sectionTextBlock {
+  padding: 0 30px;
 }
 
+
+// Header
 .horizontalList {
   list-style: none;
+
   li {
     display: inline-block;
     margin: 0 21px;
   }
 }
 
-@media screen and (max-width: 993px) {
+@media screen and (max-width: 900px) {
   .horizontalList {
     li {
       margin: 0 17px;
@@ -232,28 +272,31 @@ hr.divider {
   }
 }
 
+// END Header
+
 button:focus {
   outline: none;
 }
-// /* Global Layout */
+
+.glassTitle {
+  padding: 10px;
+  backdrop-filter: saturate(160%) blur(5px);
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
+}
+
+.error {
+  color: $color-danger;
+}
+
+.success {
+  color: $color-success;
+}
+
+/* END Global Layout */
 
 /* Responsive */
 
-@media screen and (max-width: 769px) {
-  .grid {
-    width: 100%;
-    .gridTitle {
-      padding: 10px 0;
-    }
-  }
-
-  &.boxContent {
-    padding: 30px;
-  }
-  .flexSection {
-    min-height: auto;
-  }
-}
 /* //Responsive */
 
 /* Custom UI Component */
@@ -262,13 +305,16 @@ button:focus {
     margin: 0;
     width: 100%;
   }
+
   .slick-arrow {
-    color: red;
+    color: $color-danger;
     z-index: 1;
   }
+
   .slick-prev {
     left: 10px;
   }
+
   .slick-next {
     right: 10px;
   }
@@ -279,7 +325,8 @@ button:focus {
 }
 
 .ant-drawer-wrapper-body {
-  background: #c79479;
+  background: $color-brand-primary;
+
   h1,
   .ant-drawer-close {
     color: #fff;
