--- a/src/components/StylistService/StylistService.module.scss
+++ b/src/components/StylistService/StylistService.module.scss
@@ -1,6 +1,7 @@
 .checkList {
-    margin: 40px 0;
+    margin: 40px auto;
     padding: 0 40px;
+    max-width: 400px;
 
     .item {
         display: flex;
