Stylist pick form done

--- a/src/components/InstaSlider/InstaSlider.module.scss
+++ b/src/components/InstaSlider/InstaSlider.module.scss
@@ -11,7 +11,7 @@
 //   height: 100%;
 //   padding: 25px;
 //   background-color: rgba(69, 69, 69, 1);
-//   color: #fff;
+//   color: $font-color-white;
 //   text-align: left;
 //   opacity: 0;
 //   -webkit-transition: all 0.2s ease-in;
@@ -21,7 +21,7 @@
 //   h2,
 //   h3,
 //   p {
-//     color: #fff;
+//     color: $font-color-white;
 //   }
 //   &:hover {
 //     opacity: 1;
