--- a/src/components/TagsBlock/TagsBlock.module.scss
+++ b/src/components/TagsBlock/TagsBlock.module.scss
@@ -15,7 +15,7 @@
             padding: 5px 0;
             h3 {
                 text-transform: uppercase;
-                color: #fff;
+                color: $font-color-white;
             }
         }
     }
