--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,11 +1,14 @@
 $color-background: #f6f0ec;
 $color-brand-primary: #c79479;
 $color-brand-light: #e8c7b5;
+$color-gray: #d9d9d9;
+$color-white: #fafafa;
 
 
 $font-color-dark: #1f1f1f;
 $font-color: #434343;
 $font-color-gray: #8c8c8c;
+$font-color-white: #fafafa;
 
 $color-danger: #a8071a;
 $color-success: #237804;
