--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,8 +13,8 @@
   left: 0;
   z-index: 5;
   display: block;
-  background: #fff;
-  box-shadow: 0 -1px #e3e3e3 inset;
+  background: $color-white;
+  box-shadow: 0 -1px $color-gray inset;
   transition: top 0.3s ease-in,
   background 0.3s ease-in-out,
   box-shadow 0.3s ease-in-out,
@@ -40,12 +40,12 @@
   a,
   p,
   span {
-    color: #fff;
+    color: $font-color-white;
   }
 
   .menuToggle {
     span {
-      background: #fff;
+      background: $color-white;
     }
   }
 }
@@ -138,7 +138,7 @@
   background-color: rgba(199, 148, 121, 0.5);
 
   span {
-    color: #fff;
+    color: $font-color-white;
   }
 }
 
