--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -55,7 +55,7 @@
   height: 50px;
   border: none;
   border-radius: 50%;
-  background: #fff;
+  background: $color-white;
   color: #c1a081;
   cursor: pointer;
   text-align: center;
