Stylist FAQ done; Home hero button overlap fix;

--- a/src/components/SliderArrow/SliderArrow.module.scss
+++ b/src/components/SliderArrow/SliderArrow.module.scss
@@ -17,7 +17,7 @@
   height: 40px;
   border: none;
   border-radius: 50%;
-  background: #fff;
+  background: $color-white;
   color: #c1a081;
   cursor: pointer;
   text-align: center;
