--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 .header {
-  &.downScroll {
-    top: -43px;
-  }
+  // &.downScroll {
+  //   top: -43px;
+  // }
 
   &.homepage {
     position: fixed;
@@ -136,10 +136,6 @@
   background-color: $font-color-gray;
   // opacity: 0.7;
   background-color: rgba(199, 148, 121, 0.5);
-
-  span {
-    color: $font-color-white;
-  }
 }
 
 .transparent {
