--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,7 +1,7 @@
 .smallBannerWrapper {
   height: 50vh;
 }
-@include tablet-potrait-up {
+@include TabletLandscapeUp {
   flex-direction: row;
   .smallBannerWrapper {
       height: 400px;
@@ -9,7 +9,7 @@
   }
 }
 
-@include desktop-up {
+@include DesktopUp {
   .smallBannerWrapper {
       height: 600px;
   }
