--- a/src/components/ProductList/ProductList.module.scss
+++ b/src/components/ProductList/ProductList.module.scss
@@ -1,7 +1,7 @@
 .list {
   padding: 0 10px;
 
-  @include tablet-potrait-up {
+  @include TabletPotraitUp {
     padding: 0 40px;
   }
 
@@ -12,17 +12,17 @@
 .card {
   padding: 10px;
 
-  @include tablet-potrait-up {
+  @include TabletPotraitUp {
     padding: 20px 40px;
   }
 
   flex: 1 1 100%;
 
-  @include tablet-potrait-up {
+  @include TabletPotraitUp {
     flex: 1 1 50%;
   }
 
-  @include desktop-up {
+  @include DesktopUp {
     flex: 1 1 33%;
   }
 
