--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,6 @@
 .footer {
   text-align: center;
-  // background: $color-background;
-  // background: #C79479;
+  background: $color-background;
   padding-top: 20px;
   padding-bottom: 40px;
   position: relative;
