--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding: 0;
 
-  @include TabletPotraitUp {
+  @include tabletPotraitUp {
     display: flex;
     flex-wrap: wrap;
   }
@@ -12,7 +12,7 @@
     text-align: center;
     flex: 1 1 50%;
 
-    @include PhoneOnly {
+    @include phoneOnly {
       flex: 1 1 100%;
     }
   }
@@ -29,15 +29,15 @@
   text-align: center;
   padding: 10px;
 
-  @include TabletPotraitUp {
+  @include tabletPotraitUp {
     padding: 20px;
   }
 
-  @include TabletLandscapeUp {
+  @include tabletLandscapeUp {
     padding: 40px;
   }
 
-  @include DesktopUp {
+  @include desktopUp {
     padding: 80px;
   }
 
@@ -49,14 +49,14 @@
     text-align: justify;
     color: $font-color-gray;
 
-    @include PhoneOnly {
+    @include phoneOnly {
       padding: 10px;
     }
   }
 }
 
 // In smaller screen, only 1 column, no scrolling info
-@include TabletPotraitUp {
+@include tabletPotraitUp {
   .isPastFooter {
     align-items: flex-end;
     flex-direction: row;
