--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -13,7 +13,6 @@
   }
 }
 
-
 .overlay {
   position: absolute;
   width: 100%;
@@ -22,6 +21,7 @@
 
 .contentWrapper {
   position: relative;
+
   .content {
     flex: 1 0 100%;
     display: flex;
@@ -30,10 +30,13 @@
     justify-content: center;
     padding: 0 30px;
   }
-  &.top, &.bottom {
+
+  &.top,
+  &.bottom {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+
     .filler {
       flex-grow: 4;
     }
@@ -44,7 +47,7 @@
       flex-grow: 1;
     }
   }
-  
+
 }
 
 .scrollButton {
