--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,8 +1,9 @@
-$color-background: #f6f0ec;
+$color-background: #fffaf8;
+$color-background-alternate: #f7f5ec;
 $color-brand-primary: #c79479;
 $color-brand-light: #e8c7b5;
 $color-gray: #d9d9d9;
-$color-white: #fafafa;
+$color-white: #fff;
 
 
 $font-color-dark: #1f1f1f;
