--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 $color-background: #fffaf8;
 $color-background-alternate: #f7f5ec;
+$color-background-dark: #333333;
 $color-brand-primary: #c79479;
 $color-brand-light: #e8c7b5;
 $color-gray: #d9d9d9;
