--- a/src/components/ProductList/ProductList.module.scss
+++ b/src/components/ProductList/ProductList.module.scss
@@ -16,14 +16,10 @@
     padding: 20px 40px;
   }
 
-  flex: 1 1 100%;
-
-  @include tabletPotraitUp {
-    flex: 1 1 50%;
-  }
+  flex: 0 0 50%;
 
   @include desktopUp {
-    flex: 1 1 33%;
+    flex: 0 0 33%;
   }
 
   img {
@@ -37,16 +33,22 @@
     justify-content: space-between;
     align-items: baseline;
 
-    &.vertical {
-      flex-direction: column;
-      align-items: center;
+  }
 
-      h1,
-      h2,
-      h3 {
-        margin-bottom: 0;
-      }
+  .vertical {
+    flex-direction: column;
+    align-items: center;
+
+    h1,
+    h2,
+    h3 {
+      margin-bottom: 0;
     }
+  }
+
+  .center {
+    display: flex;
+    justify-content: center;
   }
 }
 
