--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,3 +1,4 @@
+
 .hero {
   align-items: center;
   background-size: cover;
@@ -13,7 +14,7 @@
       min-height: calc(100vh - 160px);
     }
   }
-  
+
   @include tabletPotraitUp {
     min-height: 500px;
     height: 500px;
@@ -36,6 +37,17 @@
     align-items: center;
     justify-content: center;
     padding: 0 30px;
+
+    h1,
+    h2 {
+      font-size: 3em;
+
+      @include desktopUp {
+        font-size: 4em;
+      }
+    }
+
+
   }
 
   &.top,
