--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,17 +17,25 @@ $color-success: #5cb85c;
 
 // 3 break point: 600, 900, 1200
 @mixin phoneOnly {
-    @media (max-width: 599px) { @content; }
+    @media (max-width: 599px) {
+        @content;
+    }
 }
 
 @mixin tabletPotraitUp {
-    @media (min-width: 600px) { @content; }
+    @media (min-width: 600px) {
+        @content;
+    }
 }
 
 @mixin tabletLandscapeUp {
-    @media (min-width: 900px) { @content; }
+    @media (min-width: 900px) {
+        @content;
+    }
 }
 
 @mixin desktopUp {
-    @media (min-width: 1200px) { @content; }
+    @media (min-width: 1200px) {
+        @content;
+    }
 }
